<resources>
    <string name="app_name">Shorts</string>
    <string name="welcomeTxt">Welcome</string>
    <string name="toTxt">To</string>
    <string name="loginButton">Login</string>
    <string name="sign_up_for_an_account">Sign up for an Account</string>
    <string name="or">OR</string>
    <string name="login_with">Login with</string>
    <string name="emailEditText">Email</string>
    <string name="passwordEditText">Password</string>
    <string name="registerButton">Register </string>
    <string name="remember_me">Remember me</string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="go_back">Go Back</string>
    <string name="signout">signout</string>
    <string name="profile">Profile</string>
    <string name="settings">Edit Settings</string>
    <string name="shorts">Shorts</string>
</resources>